--- a/css/styling-text/typesetting-a-homepage-start/style.css
+++ b/css/styling-text/typesetting-a-homepage-start/style.css
@@ -1,7 +1,7 @@
 /* General setup */
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
@@ -43,3 +43,83 @@ header, footer {
 }
 
 /* WRITE YOUR CODE BELOW HERE */
+
+html {
+    font-size: 10px;
+}
+
+body {
+    font-family: 'Karma', serif;
+    font-size: 1.8em;
+    line-height: 1.5;
+}
+
+p {
+    text-indent: 2em;
+}
+
+h1, h2 {
+    font-family: 'Abril Fatface', cursive;
+    font-size: 3.2em;
+    letter-spacing: 2px;
+}
+h2 {
+    font-size: 2.4em;
+}
+
+header {
+    text-align: center;
+}
+
+section:first-line {
+    margin: 20px;
+}
+
+a {
+    color: black;
+    outline: none;
+    
+}
+
+a:link {
+
+}
+
+a:visited {
+
+}
+ 
+aside a:focus, aside a:hover {
+        background-color: #a66;
+        color: white;
+        text-decoration: none;
+    }   
+
+a:active {
+    background-color: lightslategray;
+}
+
+a[href*="http"] {
+        background: url('https://png.icons8.com/metro/50/000000/external-link.png') no-repeat 100% 0;
+        background-size: .5em .5em;
+        padding-right: .6em;
+    }
+
+nav li {
+    border: ;
+    border-radius: 5px 4px;
+    margin: 5px;
+    line-height: 2;
+    background: #ffe375;
+    text-decoration: none;
+    text-align: center;
+    font-family: 'Abril Fatface', cursive;
+}
+nav li a {
+    text-decoration: none;
+}
+
+nav li:hover {
+    background-color: white;
+
+}
