--- a/css/styling-boxes/cool-information-box-start/style.css
+++ b/css/styling-boxes/cool-information-box-start/style.css
@@ -1,5 +1,32 @@
 html {
   font-family: sans-serif;
+  font-size: 10px;
 }
 
 /* Your CSS below here */
+p {
+    width: 200px;
+    height: 100px;
+    text-align: center;
+    font-size: 1.8rem;
+    vertical-align: middle;
+    line-height: 100px;
+    text-shadow: 3px 3px 8px black;
+    color: chartreuse;
+    border-radius: 10px;
+    border: 1px solid #7Faa00;
+    background: linear-gradient(to bottom right, rgba(0,0,0,0) 30%, rgba(0,0,0,0.2));
+    background-color: chartreuse;
+    box-shadow: 5px 5px 5px black,
+            inset 2px 2px 2px white,
+            inset -2px -2px 2px black;
+
+}
+p:hover {
+   background: linear-gradient(to bottom right, rgba(0,0,0,.2) 30%, rgba(0,0,0,0.6));
+    }
+p:active {
+    box-shadow: -2px -2px 3px black,
+                inset 2px 2px 2px black,
+                inset -2px -2px 2px white;
+}
