--- a/express/express-locallibrary-tutorial/views/book_delete.pug
+++ b/express/express-locallibrary-tutorial/views/book_delete.pug
@@ -1,28 +1,28 @@
 extends layout
 
 block content
-    h1 #{title}: #{book.title} 
-    p= book.summary
+	h1 #{title}: #{book.title} 
+	p= book.summary
 
-    if book_instances.length
+	if book_instances.length
 
-        p #[strong Delete the following book instances before attempting to delete this book.] 
+		p #[strong Delete the following book instances before attempting to delete this book.] 
 
-        div(style='margin-left20px;margin-top:20px')
+		div(style='margin-left20px;margin-top:20px')
 
-            h4 Copies
+			h4 Copies
 
-            dl
-            each instance in book_instances
-                dt 
-                    a(href=instance.url) #{instance.title} 
-                dd #{instance.id}
+			dl
+			each instance in book_instances
+				dt 
+					a(href=instance.url) #{book.title} 
+				dd #{instance.id} - #{instance.imprint}
 
-    else
-        p Do you really want to delete this Book?
+	else
+		p Do you really want to delete this Book?
 
-        form(method='POST' action='')
-            div.form-group
-                input#bookid.form-control(type='hidden',name='bookid', required='true', value=book._id )
+		form(method='POST' action='')
+			div.form-group
+				input#bookid.form-control(type='hidden',name='bookid', required='true', value=book._id )
 
-            button.btn.btn-primary(type='submit') Delete
+			button.btn.btn-primary(type='submit') Delete
